@@ -102,7 +102,7 @@
 
   <module id="epiphany">
     <cvs-directory>epiphany/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="evince">
@@ -133,7 +133,7 @@
 
   <module id="gnome-accessibility-guide">
     <cvs-directory>gnome-user-docs/gnome2-accessibility-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
 
@@ -157,7 +157,7 @@
 
   <module id="gnome-system-admin-guide">
     <cvs-directory>gnome-user-docs/gnome2-system-admin-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-boot">
@@ -187,7 +187,7 @@
 
   <module id="gnome-user-guide">
     <cvs-directory>gnome-user-docs/gnome2-user-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+    <cvs-branch>gnome-2-14</cvs-branch>
   </module>
 
   <module id="gnome-utils-dictionary">
