@@ -1,3 +1,8 @@
+2006-03-13  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.xml: branch epiphany, gnome-system-guide,
+	gnome-accessibility-guide and gnome-user-guide.
+
 2006-03-06  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Move release-notes up to 2.14.
